Fix cut off hover popup in playground

--- a/website/playground/styles/globals.css
+++ b/website/playground/styles/globals.css
@@ -3,3 +3,7 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100&display=swap");
+
+pre {
+    font-family: "JetBrains Mono", monospace;
+}
